k8s-manifests/count-stats/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: count-stats-stage
  labels:
    environment: staging
