k8s-manifests/count-stats/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: count-stats
spec:
  replicas: 3  # 1 replica per node across the 3-node staging cluster
  template:
    spec:
      containers:
      - name: count-stats
        image: dockerhub.ebi.ac.uk/ebivariation/eva-ws
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
