k8s-manifests/count-stats/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: count-stats
spec:
  rules:
  - host: wwwdev.ebi.ac.uk
    http:
      paths:
      - path: /eva/webservices/count-stats
        pathType: Prefix
        backend:
          service:
            name: count-stats
            port:
              number: 8080
